k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: microservices
  labels:
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: 256056679502.dkr.ecr.eu-north-1.amazonaws.com/admin:sha-3646f0f
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: microservices
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
