k8s/email-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  namespace: microservices
  labels:
    app: email-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: 256056679502.dkr.ecr.eu-north-1.amazonaws.com/email-service@sha256:54764fb83277e4b271d007c2780f69af5edac02cdbacaab0ba010cc97dbf620e
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet:
              path: /
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8004
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: microservices
spec:
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP
