k8s/frontend-apps.yaml
# --- ADMIN APP ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: admin
          image: 256056679502.dkr.ecr.eu-north-1.amazonaws.com/admin@sha256:e02bf60fcc3b5b15e3da7509a7d109241acf989e3bad1c925ea87974c0a9c8e0
          ports:
            - containerPort: 3001
          resources:
            requests: { memory: "150Mi", cpu: "200m" }
            limits: { memory: "300Mi", cpu: "800m" }
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: microservices
spec:
  type: NodePort # FIX: NodePort for external access
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 3001 # Cluster Port
      targetPort: 3001
      nodePort: 30005

# --- CLIENT APP ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: client
          image: 256056679502.dkr.ecr.eu-north-1.amazonaws.com/client@sha256:7a90ba101ec59ba737b3c885dbaf02a5cf17eb4d3869100112f15ed305086b15
          ports:
            - containerPort: 3000
          resources:
            requests: { memory: "150Mi", cpu: "200m" }
            limits: { memory: "300Mi", cpu: "800m" }
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: microservices
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30004 # EXTERNAL ACCESS PORT
