k8s/kafka-broker-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-1
  namespace: kafka
  labels:
    app: kafka-broker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-1
  template:
    metadata:
      labels:
        app: kafka-broker-1
    spec:
      hostname: kafka-broker-1
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.7.7
        ports:
        - containerPort: 9092
        - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-1
  namespace: kafka
spec:
  ports:
  - name: external
    port: 9092
    targetPort: 9092
  - name: internal
    port: 29092
    targetPort: 29092
  selector:
    app: kafka-broker-1
  type: ClusterIP
