k8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: microservices
  labels:
    app: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 256056679502.dkr.ecr.eu-north-1.amazonaws.com/payment-service@sha256:f38aa87e9230746c686fc0e284784f3e7b00872c2b7cec42968185536f8d11c6
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8002
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservices
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
