k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kafka
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: kafka
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # PREFERENCE: Tries to put DB on Worker Node (More RAM available there)
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - ip-172-31-31-194
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          command: ["docker-entrypoint.sh"]
          args:
            [
              "postgres",
              "-c",
              "shared_buffers=64MB",
              "-c",
              "max_connections=50",
            ]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "admin"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
